tests/ui/derive/option_of_enum_rejected.rs
use clapfig::Schema;

#[derive(Schema)]
enum Mode {
    Fast,
    Slow,
}

#[derive(Schema)]
struct Cfg {
    mode: Option<Mode>,
}

fn main() {}
